Fix pre-commit go-build hook to target cmd/aix
The go-build hook was pointing to the repo root (.) which has no Go
files. The main package is in cmd/aix/, causing pre-commit to fail
on every commit.

Also removes trailing whitespace from ADR document.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -28,7 +28,7 @@ repos:
     hooks:
       - id: go-build
         name: go build
-        entry: go build -buildvcs=false -o /dev/null .
+        entry: go build -buildvcs=false -o /dev/null ./cmd/aix
         language: system
         pass_filenames: false
         types: [go]
