--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -78,13 +78,8 @@ jobs:
           go-version-file: go.mod
           cache: true
 
-      - name: Install dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y gcc
-
       - name: Build
-        run: go build -v -o aix .
+        run: go build -v -o aix cmd/aix/main.go
 
       - name: Verify binary
         run: ./aix --help
