Add beads sync hook to pre-commit config
Integrates beads issue tracking with pre-commit by adding a local hook
that runs `bd hooks run pre-commit` before other checks. This ensures
the beads JSONL file stays synchronized with commits.

Previously, pre-commit and beads were competing for the pre-commit hook
file. Now pre-commit orchestrates both systems.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,16 @@
 minimum_pre_commit_version: "3.2.0"
 
 repos:
+  # Beads issue tracker sync
+  - repo: local
+    hooks:
+      - id: beads-sync
+        name: beads sync
+        entry: bd hooks run pre-commit
+        language: system
+        pass_filenames: false
+        always_run: true
+
   # golangci-lint (local hooks to support git worktrees)
   - repo: local
     hooks:
