Add skill subcommands: list, show, validate
Implement the skill management CLI commands:
- skill list: lists skills across detected platforms
- skill show: displays detailed skill information with --json and --full flags
- skill validate: validates skill files against the Agent Skills Specification

Add SkillDir() method to Platform interface for skill directory discovery.
Fix .gitignore to not match cmd/aix/ directory.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # Binaries
-aix
+/aix
 *.exe
 *.exe~
 *.dll
@@ -30,3 +30,6 @@ vendor/
 # Debug files
 __debug_bin*
 trees/
+
+# bv (beads viewer) local config and caches
+.bv/
