docs: finalize configuration and cleanup placeholder content
Sets production baseURL, removes example blog and unused language configs, updates privacy policy, and removes remaining template branding.

--- a/aix-docs/config/_default/params.toml
+++ b/aix-docs/config/_default/params.toml
@@ -132,7 +132,7 @@ mainSections = ["docs"]
     type = "SoftwareApplication" # Organization (default) or Person
     logo = "favicon.png" # Logo of Organization — favicon-512x512.png (default)
     name = "aix" # Name of Organization or Person
-    sameAs = ["https://github.com/thoreinstein/aix"] # E.g. ["https://github.com/thuliteio/thulite", "https://fosstodon.org/@thulite"]
+    sameAs = ["https://github.com/thoreinstein/aix"]
     images = ["cover.jpg"] # ["cover.png"] (default)
     article = [] # Article sections
     newsArticle = [] # NewsArticle sections
