--- a/aix-docs/config/_default/hugo.toml
+++ b/aix-docs/config/_default/hugo.toml
@@ -12,10 +12,9 @@ summarylength = 20 # 70 (default)
 
 # Multilingual
 defaultContentLanguage = "en"
-disableLanguages = ["de", "nl"]
 defaultContentLanguageInSubdir = false
 
-copyRight = "Copyright (c) 2020-2024 Thulite"
+copyRight = "Copyright (c) 2026 aix contributors"
 
 [build.buildStats]
   enable = true
