Add command edit, TTY detection, path utilities, backup hardening, and CI expansion
This commit combines several related improvements:

1. Command Edit Feature
   - Implement aix command edit to open slash commands in $EDITOR
   - Update help text across all command subcommands
   - Include auto-generated documentation

2. TTY Detection Utilities
   - Add internal/logging package with IsTTY() and SupportsColor()
   - Uses golang.org/x/term for cross-platform detection

3. Path Utilities Enhancement
   - Add EnsureDir and ResolveHome functions
   - Add sentinel errors for consistent error handling

4. Backup Permissions Hardening
   - Change backup directory permissions from 0755 to 0700
   - Change file permissions from 0644 to 0600
   - Add AtomicWriteJSONWithPerm and AtomicWriteYAMLWithPerm

5. CI Matrix Expansion
   - Add macOS to CI test matrix alongside ubuntu-latest

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,8 +44,12 @@ jobs:
           args: --timeout=5m
 
   test:
-    name: Test
-    runs-on: ubuntu-latest
+    name: Test (${{ matrix.os }})
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ubuntu-latest, macos-latest]
     needs: lint
     steps:
       - name: Checkout code
@@ -60,12 +64,12 @@ jobs:
           cache: true
 
       - name: Run tests with coverage
-        run: go test -v -race -coverprofile=coverage.out -covermode=atomic ./...
+        run: go test -v -race -coverprofile=coverage-${{ matrix.os }}.out -covermode=atomic ./...
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@0565863a31f2c772f9f0395002a31e3f06189574 # v5.4.0
         with:
-          files: ./coverage.out
+          files: ./coverage-${{ matrix.os }}.out
           fail_ci_if_error: false
           verbose: true
           token: ${{ secrets.CODECOV_TOKEN }}
@@ -73,8 +77,8 @@ jobs:
       - name: Upload coverage artifact
         uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4.6.2
         with:
-          name: coverage
-          path: coverage.out
+          name: coverage-${{ matrix.os }}
+          path: coverage-${{ matrix.os }}.out
           retention-days: 30
 
   build:
