--- a/.golangci.yml
+++ b/.golangci.yml
@@ -9,6 +9,7 @@ linters:
     - copyloopvar
     - depguard
     - errcheck
+    - errorlint
     - gocritic
     - gomodguard
     - gosec
@@ -24,6 +25,7 @@ linters:
     - unused
     - usetesting
     - whitespace
+    - wrapcheck
   settings:
     govet:
       disable:
