Configure wrapcheck to recognize internal errors package
Add extra-ignore-sigs and ignorePackageGlobs for the internal/errors
package to prevent false positive wrapcheck violations. The internal
package wraps cockroachdb/errors, so its functions should be treated
as valid error wrapping.

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -55,6 +55,14 @@ linters:
               desc: "Use io and os packages instead"
             - pkg: "github.com/pkg/errors"
               desc: "Use standard library errors package with fmt.Errorf"
+    wrapcheck:
+      extra-ignore-sigs:
+        - .Newf(
+        - .WithDetail(
+        - .WithDetailf(
+      ignorePackageGlobs:
+        - github.com/cockroachdb/errors
+        - github.com/thoreinstein/aix/internal/errors
   exclusions:
     generated: lax
     presets:
