--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,13 +8,18 @@ on:
 
 permissions:
   contents: read
+  pull-requests: read
 
 jobs:
   lint:
-    name: Lint
-    runs-on: ubuntu-latest
+    name: Lint (${{ matrix.os }})
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ubuntu-latest, macos-latest]
     env:
-      GOLANGCI_LINT_VERSION: v2.8.0
+      GOLANGCI_LINT_VERSION: v2.8
     steps:
       - name: Checkout code
         uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
@@ -26,14 +31,6 @@ jobs:
         with:
           go-version-file: go.mod
           cache: true
-
-      # - name: Build golangci-lint from source
-      #   run: |
-      #     git clone --branch ${{ env.GOLANGCI_LINT_VERSION }} --single-branch --depth 1 -c advice.detachedHead=false -q https://github.com/golangci/golangci-lint.git
-      #     cd golangci-lint
-      #     go build -trimpath -ldflags "-X main.version=${{ env.GOLANGCI_LINT_VERSION }} -X main.date=$(date -u +%Y-%m-%d_%H:%M:%S)" -o golangci-lint ./cmd/golangci-lint
-      #     sudo mv golangci-lint /usr/local/bin/
-      #     golangci-lint --version
 
       - name: Run golangci-lint
         uses: golangci/golangci-lint-action@1e7e51e771db61008b38414a730f564565cf7c20 # v9.2.0
